@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. merge with colorer truemod
+
+#Revision: 1554
+	Author: ctapmex Date: 2010-09-22 16:04:13 +0600 (Ср, 22 сен 2010)
 	1. мусор в строке возвращаемой функцией PathToFull.
 
 #Revision: 1550
